# framegrab

./: .dockerignore  .gitignore  CAMERAS.md  DEVELOPING.md  Dockerfile  LICENSE.txt  README.md  RELEASE.md  USERGUIDE.md  create_streams.sh  grabber.py  logging.yaml  motion.py  pan_test.py  pyproject.toml  requirements.txt  robustness_script.py  rtsp_publisher.py  run_rtsp_docker.sh  run_rtsp_server.sh  streamlight.py  test.py  write_config_format.py
.github/workflows/: auto-format.yaml  generate-documentation.yaml  publish-dockerhub.yaml  publish.yaml  tests.yaml
demo_env/: pyvenv.cfg
demo_env/Scripts/: activate  activate.bat
docker/: Dockerfile  Dockerfile.gstreamer  Dockerfile.rtsp  docker-compose.rtsp.yaml
ros2/: Dockerfile  README.md  config.rviz  demo.py  demo.sh  docker-compose.yaml  entrypoint.sh  ros2_demo.py  sample_camera.py  start_camera.sh
sample_scripts/: autodiscover_demo.py  multicamera_demo.py  sample_config.yaml  single_camera_demo.py  stream_rtsp_with_gstreamer.py  video_to_rtsp.py  view_rtsp_stream.py  youtube_stream_demo.py
src/: camera_options_schema.yaml  framegrab_example.py  motion.py  stream.py
src/framegrab/: __init__.py  config.py  exceptions.py  grabber.py  motion.py  ros2_client.py  rtsp_discovery.py  rtsp_server.py  unavailable_module.py
src/framegrab/cli/: autodiscover.py  balena_rtsp_tunnel.py  balena_rtsp_tunnel.sh  clitools.py  main.py  preview.py  rtsp_server.py
src/framegrab/config/: camera_options.py  config.py  write_options_schemas.py
test/: script.py  test_all_grabber_types_generic.py  test_ascii_magic_dependency.py  test_boop.py  test_config.py  test_crop.py  test_framegrab_with_filestream.py  test_framegrab_with_hls.py  test_framegrab_with_mock_camera.py  test_motdet.py  test_options_field.py  test_rtsp.py  test_rtsp_backends.py  test_rtsp_discovery.py  test_rtsp_gstreamer.py  test_rtsp_integration.py
